test/should-fail/vsgc1188.f3
/*
 * @test/compile-error
 */

function fn():Void[]{
java.lang.System.out.println("");
}
